// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider          = "postgresql"
  url               = env("DB_URI")
  shadowDatabaseUrl = env("SHADOW_DB_URI")
}

model User {
  password String
  email    String   @unique
  id       Int      @id @default(autoincrement())
  company  Company?
}

model Company {
  id         Int        @id @default(autoincrement())
  name       String
  user       User       @relation(fields: [userId], references: [id])
  userId     Int        @unique
  categories Category[]
  products   Product[]
}

model Category {
  id        Int       @id @default(autoincrement())
  name      String    @unique
  companies Company[]
  Product   Product[]
}

model Product {
  id           Int      @id @default(autoincrement())
  price        Int
  name         String
  category     Category @relation(fields: [categoryName], references: [name])
  categoryName String
  Company      Company? @relation(fields: [companyId], references: [id])
  companyId    Int?
}
