//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  password String [not null]
  email String [unique, not null]
  id Int [pk, increment]
  company Company
}

Table Company {
  id Int [pk, increment]
  name String [not null]
  user User [not null]
  userId Int [unique, not null]
  categories Category [not null]
  products Product [not null]
}

Table Category {
  id Int [pk, increment]
  name String [unique, not null]
  companies Company [not null]
  Product Product [not null]
}

Table Product {
  id Int [pk, increment]
  price Int [not null]
  name String [not null]
  category Category [not null]
  categoryName String [not null]
  Company Company
  companyId Int
}

Table CategoryToCompany {
  categoriesId Int [ref: > Category.id]
  companiesId Int [ref: > Company.id]
}

Ref: Company.userId - User.id

Ref: Product.categoryName > Category.name

Ref: Product.companyId > Company.id